feat: add session-based authentication and admin interface
- Implemented session management with cookies for secure admin authentication
- Added admin routes for posts, media, and publishing with EJS template support
- Updated dependencies to latest Fastify v5 and added session/cookie plugins
- Changed default port to 3025 and added SESSION_SECRET to required environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,17 @@
 # Server
 NODE_ENV=development
-PORT=3000
-BASE_URL=http://localhost:3000
+PORT=3025
+BASE_URL=http://localhost:3025
 
 # Database
 DB_PATH=./data/square.db
 
 # Admin credentials (in production use strong values)
-ADMIN_USER=admin
+ADMIN_USER=admin@test.de
 ADMIN_PASS=change_me_in_production
+
+# Session secret (generate strong random string in production)
+SESSION_SECRET=change_this_to_a_random_32_char_string_in_production
 
 # Ingest API token
 INGEST_TOKEN=your_secret_token_here
