--- a/package.json
+++ b/package.json
@@ -18,19 +18,23 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@fastify/compress": "^7.0.0",
-    "@fastify/cors": "^9.0.0",
-    "@fastify/formbody": "^7.4.0",
-    "@fastify/helmet": "^11.1.1",
-    "@fastify/multipart": "^8.1.0",
-    "@fastify/rate-limit": "^9.1.0",
-    "@fastify/static": "^7.0.0",
-    "@fastify/view": "^9.0.0",
+    "@fastify/compress": "^8.0.1",
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^10.0.1",
+    "@fastify/formbody": "^8.0.1",
+    "@fastify/helmet": "^12.0.1",
+    "@fastify/multipart": "^9.0.1",
+    "@fastify/rate-limit": "^10.1.1",
+    "@fastify/secure-session": "^8.2.0",
+    "@fastify/session": "^11.1.1",
+    "@fastify/static": "^8.0.2",
+    "@fastify/view": "^10.0.1",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.7.0",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.9",
-    "fastify": "^4.26.0",
+    "fastify": "^5.2.0",
+    "fastify-plugin": "^5.1.0",
     "nanoid": "^5.0.5",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1"
