--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,8 @@ RSS_CACHE_TTL=300000
 
 # OpenAI
 OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_IMAGE_MODEL=gpt-image-1
+OPENAI_IMAGE_SIZE=1024x1024
+OPENAI_IMAGE_QUALITY=high
+OPENAI_IMAGE_FORMAT=png
+OPENAI_TEXT_MODEL=gpt-4o-mini
