--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fastify/session": "^11.1.1",
     "@fastify/static": "^8.0.2",
     "@fastify/view": "^10.0.1",
+    "@napi-rs/canvas": "^0.1.83",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.7.0",
     "dotenv": "^17.2.3",
