feat: add email configuration and user management foundation for magic link authentication
- Added email SMTP configuration with rate limiting, TLS support, and timeout settings
- Added magic link configuration for TTL, rate limits, and max attempts per hour
- Extended user management library with CRUD operations: getUserByEmail, getAllUsers, updateUser, updateUserPassword, deleteUser, and emailExists
- Added requireAdmin decorator to enforce admin-only access control
- Registered admin users an

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,18 @@ OPENAI_IMAGE_SIZE=1024x1024
 OPENAI_IMAGE_QUALITY=high
 OPENAI_IMAGE_FORMAT=png
 OPENAI_TEXT_MODEL=gpt-4o-mini
+
+# Email settings (for magic link authentication)
+EMAIL_HOST=smtp.example.com
+EMAIL_PORT=587
+EMAIL_USER=no-reply@example.com
+EMAIL_PASSWORD=your_smtp_password
+EMAIL_USE_TLS=true
+EMAIL_FROM_NAME=Square Publisher
+EMAIL_RATE_LIMIT=60
+EMAIL_TIMEOUT=10
+
+# Magic link settings
+MAGIC_LINK_TTL_MINUTES=60
+MAGIC_LINK_MAX_PER_HOUR=10
+MAGIC_LINK_RATE_LIMIT=20
