--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fastify": "^5.2.0",
     "fastify-plugin": "^5.1.0",
     "nanoid": "^5.0.5",
+    "nodemailer": "^6.9.16",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1",
     "sanitize-html": "^2.17.0"
