--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "dev": "node --watch server.js",
     "migrate": "node scripts/migrate.js",
-    "test": "node --test tests/*.spec.js"
+    "test": "node --test tests/*.spec.js",
+    "send:payloads": "node scripts/send-payloads.js"
   },
   "keywords": [
     "fastify",
